--- a/prologin/pages/templates/pages/about-final.html
+++ b/prologin/pages/templates/pages/about-final.html
@@ -86,9 +86,7 @@
 				</g>
 				<g>
 					<rect x="460" y="90" width="110" height="45" style="fill: #d4bc8e;"/>
-					<text y="105">{% blocktrans %}
-						<tspan x="470">Award ceremony,</tspan><tspan x="470" dy="15">banquet</tspan>
-					{% endblocktrans %}</text>
+					<text y="105">{% blocktrans %}<tspan x="470">Award ceremony,</tspan><tspan x="470" dy="15">banquet</tspan>{% endblocktrans %}</text>
 				</g>
 				<g>
 					<rect x="-30" y="140" width="400" height="30" style="fill: #d4bc8e;"/>
