--- a/prologin/pages/templates/pages/about-semifinals.html
+++ b/prologin/pages/templates/pages/about-semifinals.html
@@ -20,21 +20,21 @@
 <div class="container"> {# unhack #}
 
 	<p>{% blocktrans %}The semifinal tests are intended to test the capability of candidates to solve algorithmic problems
-		but also to implement their solution on a machine, in the programming language they prefer. This is also an
-		opportunity for candidates to meet other enthusiasts, and for the organizers to relate their experience, to help
-		them progress.{% endblocktrans %}</p>
+but also to implement their solution on a machine, in the programming language they prefer. This is also an
+opportunity for candidates to meet other enthusiasts, and for the organizers to relate their experience, to help
+them progress.{% endblocktrans %}</p>
 	<p>{% blocktrans %}The 200 to 300 selected candidates are divided into different semifinals, which take place in
-		multiple sessions from mid-January, in the following French cities: Paris, Lyon, Toulouse, Strasbourg, Nantes,
-		Lille, Toulon, Louvain-la-Neuve and Bordeaux.{% endblocktrans %}</p>
+multiple sessions from mid-January, in the following French cities: Paris, Lyon, Toulouse, Strasbourg, Nantes,
+Lille, Toulon, Louvain-la-Neuve and Bordeaux.{% endblocktrans %}</p>
 
 	<h2>{% trans "The three tests" %}</h2>
 
 	<h3>{% trans "The written exam" %}</h3>
 	<p>{% blocktrans %}This lasts three hours. The test consists of a series of five or six questions around a common
-		theme. These questions of increasing difficulty guide the candidate in the stages of resolution of an algorithmic
-		problem. The first exercives focuse on modeling the problem and are here to check that the candidate masters the
-		basic principles of algorithms, and the next exercises require the candidate to develop effective algorithms
-		for harder problems.{% endblocktrans%}</p>
+theme. These questions of increasing difficulty guide the candidate in the stages of resolution of an algorithmic
+problem. The first exercives focuse on modeling the problem and are here to check that the candidate masters the
+basic principles of algorithms, and the next exercises require the candidate to develop effective algorithms
+for harder problems.{% endblocktrans%}</p>
 
 	<h3>{% trans "The interview" %}</h3>
 	<p>TODO</p>
@@ -76,11 +76,9 @@
 			</g>
 			<g id="texts">
 				<text x="270" y="45">{% trans "Accueil des candidats, petit déjeuner offert" %}</text>
-				<text y="110">{% blocktrans %}<tspan x="170">Épreuve écrite</tspan>
-					<tspan x="170" dy="20">d'algorithmique (3h)</tspan>{% endblocktrans %}
+				<text y="110">{% blocktrans %}<tspan x="170">Épreuve écrite</tspan> <tspan x="170" dy="20">d'algorithmique (3h)</tspan>{% endblocktrans %}
 				</text>
-				<text y="110">{% blocktrans %}<tspan x="375">Entretien</tspan>
-					<tspan x="375" dy="20">(15-20 minutes)</tspan>{% endblocktrans %}
+				<text y="110">{% blocktrans %}<tspan x="375">Entretien</tspan> <tspan x="375" dy="20">(15-20 minutes)</tspan>{% endblocktrans %}
 				</text>
 				<text x="270" y="195">{% trans "Repas offert et correction de l'épreuve écrite" %}</text>
 				<text x="270" y="265">{% trans "Épreuve sur machine (4h)" %}</text>
