problems: editor/code preview: add a bit of v-padding

--- a/prologin/problems/templates/problems/submission.html
+++ b/prologin/problems/templates/problems/submission.html
@@ -145,5 +145,6 @@ You can still try to submit your code again using the â€œEdit and submit againâ€
 			readOnly: true,
 			maxLines: Infinity
 		});
+		editor.renderer.setScrollMargin(4, 4);
 	</script>
 {% endblock %}
