--- a/prologin/problems/templates/problems/submission.html
+++ b/prologin/problems/templates/problems/submission.html
@@ -24,7 +24,9 @@
 
 	<div class="row">
 		<div class="col-md-9 col-sm-7">
-			<p class="text-muted">{% blocktrans with lang=submission.get_language_display %}Programmed in <strong>{{ lang }}</strong>{% endblocktrans %}
+			<p class="text-muted">
+			{% if submission.submission.user != request.user %}{% blocktrans with username=submission.submission.user.username %}Submitted by <strong>{{ username }}</strong>{% endblocktrans %} ⋅{% endif %}
+				{% blocktrans with lang=submission.get_language_display %}Programmed in <strong>{{ lang }}</strong>{% endblocktrans %}
 				⋅ {% blocktrans with date=submission.date_submitted|date:'DATETIME_FORMAT' short_date=submission.date_submitted|date:'c' %}Submitted on <strong title="{{ short_date }}">{{ date }}</strong>{% endblocktrans %}
 			</p>
 			<blockquote>
@@ -39,7 +41,9 @@
 			<div class="panel panel-default">
 				<div class="panel-body text-center {% if submission.succeeded %}bg-success{% elif submission.done %}bg-danger{% endif %}">
 					<p class="{% if submission.succeeded %}text-success{% elif submission.done %}text-danger{% endif %}">
-					{% if submission.succeeded %}
+					{% if not submission.correctable %}
+					<i class="fa fa-circle-o"></i> {% trans "Not correctable" %}
+					{% elif submission.succeeded %}
 					<i class="fa fa-check-circle text-success"></i> {% trans "Solution passes tests" %}
 					{% elif submission.done %}
 					<i class="fa fa-times-circle"></i> {% trans "Solution is invalid" %}
@@ -66,11 +70,11 @@
 			<i class="fa" data-indicator="#submission-code"></i>
 			<a role="button" data-toggle="collapse" href="#submission-code" aria-expanded="false" aria-controls="submission-code">{% trans "Solution code" %}</a></div>
 		<div class="panel-body panel-collapse collapse" style="padding: 0;" id="submission-code" role="tabpanel" aria-labelledby="{% trans "Solution code" %}">
-			{% pygmentize submission.code submission.language_def.ace_mode %}
+			{% pygmentize submission.code submission.language_enum.pygments_lexer %}
 		</div>
 	</div>
 
-	{% if submission.done and not submission.expired_result %}
+	{% if submission.correctable and submission.done and not submission.expired_result %}
 	{% with results=submission.correction_results %}
 	<div class="alert alert-{% if results.compilation.success %}success{% else %}warning{% endif %}">
 	{% if results.compilation.success %}
@@ -110,6 +114,8 @@
 	{% endif %}
 	{% endwith %}
 	<p class="alert alert-info"><i class="fa fa-exclamation-triangle"></i> {% blocktrans with rem=submission.expired_result_datetime|naturaltime %}These compilation and test results will be gone {{ rem }}.{% endblocktrans %}</p>
+	{% elif not submission.correctable %}
+		<p class="alert alert-info">{% blocktrans %}The submission can not be corrected as it was written in a language that can not be compiled nor executed.{% endblocktrans %}</p>
 	{% elif submission.expired_result %}
 		<p class="alert alert-info">{% blocktrans %}Submission results are not available anymore. This is because the code was submitted a long time ago.
 You can still try to submit your code again using the “Edit and submit again” button.{% endblocktrans %}</p>
